[package]
name = "h1mcp"
version = "0.1.1"
edition = "2021"
description = "HackerOne MCP server — full API coverage + local draft management"
license = "MIT"

[[bin]]
name = "h1mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.7.0", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
url = "2"
schemars = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
